--- a/res/layout/main_layout.xml
+++ b/res/layout/main_layout.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/mainLinearLayout"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/tap_to_open"
-            android:onClick="openFile"
-            android:clickable="true"
-            android:id="@+id/tv"/>
-
+            />
 </LinearLayout>
