set input password invisible

--- a/res/layout/ask_password_dialog.xml
+++ b/res/layout/ask_password_dialog.xml
@@ -10,7 +10,7 @@
               android:layout_height="match_parent"
               android:layout_margin="10px"/>
 
-    <EditText android:inputType="text"
+    <EditText android:inputType="textPassword"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_margin="10px"
